# catalog_1a

./: .gitmodules  .rustfmt.toml  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
assets/: avc.mov  hevc.mov  test.xmp
data/: base.mov
exiftool/: run.sh
src/: checks_entry.rs  checks_global.rs  commands.rs  config.rs  file.rs  fixes.rs  import.rs  io.rs  main.rs  metadata.rs  process.rs  scan.rs  setup.rs  util.rs
src/catalog/: catalog.rs  exiftool.rs  file.rs  io.rs  live_photo_linker.rs  live_photos.rs  media.rs  metadata.rs  mgr.rs  mod.rs  organizer.rs  sidecar.rs  util.rs
src/catalog/assets/: file.rs  media.rs  mod.rs
src/config/: constants.rs
src/org/: catalog.rs  gbl.rs  live_photo.rs  mod.rs  organizer.rs  stage_1_cleanup.rs  stage_2_sidecars.rs  stage_3_metadata.rs  stage_4_synchronization.rs  stage_5_validation.rs  stage_6_organization.rs  testing.rs
src/org/io/: exiftool.rs  functions.rs  mod.rs
src/organization/: catalog.rs  live_photo_linker.rs  mod.rs  organizer.rs  testing.rs
src/prim/: conv.rs  file_map.rs  live_photos.rs  media.rs  metadata.rs  mod.rs  sidecar_dupe.rs  sidecar_initial.rs
src/process/: util.rs
src/scan/: directory.rs  media.rs  sidecar.rs
src/testing/: asserts.rs  dates.rs  mod.rs  test_dir.rs
test_data/: base.heic  img.heic
test_data/test_creates_missing_sidecars/: image.jpg.xmp
test_data/test_prioritizes_live_photo_image_over_video_metadata/: avc.mov_original
test_data/test_trashes_leftover_live_photo_video/: avc.mov  image1.heic
test_data/test_trashes_live_photo_duplicate/: avc.mov
(+13 files in other folders)
