[package]
authors = ["Seth Pendergrass"]
name = "imlib"
version = "1.0.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.3.12", features = ["derive"] }
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.19"
regex = "1.10.4"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
xdg = "2.5.2"

[lints.clippy]
pedantic = "warn"
